[gd_scene load_steps=13 format=3 uid="uid://o87n70ffjj6m"]

[ext_resource type="Script" path="res://Scenes/level/Game.gd" id="1_1bm8v"]
[ext_resource type="PackedScene" uid="uid://bqu7hxa8xj35x" path="res://Scenes/player/Player.tscn" id="2_b1phv"]
[ext_resource type="PackedScene" path="res://Scenes/ui/hud.tscn" id="2_jdc5n"]
[ext_resource type="PackedScene" uid="uid://cdmoasuvltdhn" path="res://Scenes/asteroids/asteroid.tscn" id="3_o05qc"]
[ext_resource type="PackedScene" path="res://Scenes/ui/game_over_screen.tscn" id="3_oweji"]
[ext_resource type="PackedScene" path="res://Scenes/level/player_spawn_area.tscn" id="5_axohx"]
[ext_resource type="AudioStream" uid="uid://d118xdpo11vmv" path="res://kenney_space-shooter-redux/Bonus/sfx_laser1.ogg" id="7_tl1dh"]
[ext_resource type="AudioStream" uid="uid://bxyubyquju7l" path="res://kenney_space-shooter-redux/Bonus/sfx_lose.ogg" id="8_k7g56"]
[ext_resource type="Texture2D" uid="uid://b7pgmdajo0x7a" path="res://temporary_assets/ref medium_big ship.png" id="9_a7b6i"]
[ext_resource type="PackedScene" uid="uid://bw2fl3jvafj08" path="res://Scenes/enemies/EnemyTurret.tscn" id="10_1r6px"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4hbaj"]
emission_shape = 3
emission_box_extents = Vector3(1, 360, 1)
particle_flag_disable_z = true
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = -10.0
initial_velocity_max = -10.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_f5img"]
emission_shape = 3
emission_box_extents = Vector3(1, 360, 1)
particle_flag_disable_z = true
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = -20.0
initial_velocity_max = -20.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 3.0
scale_max = 3.0

[node name="Game" type="Node2D"]
script = ExtResource("1_1bm8v")

[node name="BackgroundStarField" type="Node2D" parent="."]

[node name="StarFieldBack" type="GPUParticles2D" parent="BackgroundStarField"]
z_index = -100
position = Vector2(1324, 360)
amount = 1000
process_material = SubResource("ParticleProcessMaterial_4hbaj")
lifetime = 140.0
preprocess = 280.0

[node name="StarFieldMiddle" type="GPUParticles2D" parent="BackgroundStarField"]
z_index = -25
position = Vector2(1324, 360)
amount = 250
process_material = SubResource("ParticleProcessMaterial_f5img")
lifetime = 140.0
preprocess = 280.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_jdc5n")]
offset_left = 12.0
offset_top = 8.0
offset_right = 52.0
offset_bottom = 48.0

[node name="GameOverScreen" parent="UI" instance=ExtResource("3_oweji")]
offset_left = -5.0
offset_top = -26.0
offset_right = -5.0
offset_bottom = -26.0

[node name="Lasers" type="Node" parent="."]

[node name="Asteroids" type="Node" parent="."]

[node name="Asteroid" parent="Asteroids" instance=ExtResource("3_o05qc")]
position = Vector2(462, 270)

[node name="Asteroid2" parent="Asteroids" instance=ExtResource("3_o05qc")]
position = Vector2(252, 548)

[node name="PlayerSpawnPos" type="Node2D" parent="."]
position = Vector2(640, 360)

[node name="PlayerSpawnArea" parent="PlayerSpawnPos" instance=ExtResource("5_axohx")]

[node name="PlayerDieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_k7g56")
volume_db = -20.661

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_tl1dh")
volume_db = -20.661

[node name="ref1" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(625, -335)
rotation = -1.95644
scale = Vector2(2, 2)
texture = ExtResource("9_a7b6i")

[node name="ref2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-737, -550)
rotation = -3.91973
scale = Vector2(2, 2)
texture = ExtResource("9_a7b6i")

[node name="Player" parent="." instance=ExtResource("2_b1phv")]
position = Vector2(640, 360)

[node name="EnemyTurret" parent="." instance=ExtResource("10_1r6px")]
